[tool.poetry]
name = "pytest-qaseio"
description = "Pytest plugin for Qase.io integration"
version = "2.4.0"
license = "MIT"

authors = [
  "Saritasa <pypi@saritasa.com>",
]

readme = "README.md"

homepage = "https://pypi.org/project/pytest-qaseio/"
repository = "https://github.com/saritasa-nest/pytest-qaseio"

keywords = [
  "pytest",
  "qase",
  "qaseio",
  "selenium",
  "autotests",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Framework :: Pytest",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Testing",
]

[tool.poetry.plugins."pytest11"]
pytest_qaseio = "pytest_qaseio.plugin"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.21.0"
arrow = "^1.2.3"
filelock = "^3.14.0"
pytest = ">=7.2.2,<9.0.0"
qase-api-client = "^1.1.1"

[tool.poetry.group.dev.dependencies]
# Improved REPL
ipdb = "^0.13.13"
ipython = ">=8.24,<10.0"
# A framework for managing and maintaining multi-language pre-commit hooks.
# https://pre-commit.com/
pre-commit = ">=3.7.1,<5.0.0"

[tool.poetry.group.linters.dependencies]
# Mypy is a static type checker for Python.
# https://mypy.readthedocs.io/en/stable/
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
enable_error_code = [
  "truthy-bool",
  "redundant-expr",
  "unused-awaitable",
]

allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "qaseio.*"
implicit_reexport = true


[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__init__.py",
]

[tool.ruff.lint]
extend-select = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "W",
    "E",
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C90",
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I",
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",
    # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D",
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP",
    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ANN",
    # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "S",
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B",
    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "A",
    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "COM",
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C4",
    # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "DTZ",
    # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T10",
    # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "DJ",
    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "T20",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SIM",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PTH",
    # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TD",
    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "ERA",
    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "RUF"
]

ignore = [
    # https://docs.astral.sh/ruff/rules/missing-type-self/
    "ANN101",
    # https://docs.astral.sh/ruff/rules/missing-type-cls/
    "ANN102",
    # https://docs.astral.sh/ruff/rules/missing-type-args/
    "ANN002",
    # https://docs.astral.sh/ruff/rules/missing-type-kwargs/
    "ANN003",
    # https://docs.astral.sh/ruff/rules/any-type/
    "ANN401",
    # https://docs.astral.sh/ruff/rules/missing-return-type-special-method/
    "ANN204",
    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D100",
    # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "D107",
    # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D104",
    # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D105",
    # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
    "D106",
    # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D203",
    # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D213",
    # https://docs.astral.sh/ruff/rules/dashed-underline-after-section/
    "D407",
    # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "N818",
    # https://docs.astral.sh/ruff/rules/invalid-module-name/
    "N999",
    # https://docs.astral.sh/ruff/rules/unnecessary-collection-call/
    "C408",
    # https://docs.astral.sh/ruff/rules/mutable-class-default/
    "RUF012",
    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D100",
    # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D102",
    # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D103",
    # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D105",
    # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
    "D106",
    # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "D107",
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F403",
    # https://docs.astral.sh/ruff/rules/capitalize-section-name/
    "F405",
    # https://docs.astral.sh/ruff/rules/pytest-missing-fixture-name-underscore/
    "PT004",
    # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
    "B008",
    # https://docs.astral.sh/ruff/rules/non-pep695-type-alias/
    "UP040",
    # https://docs.astral.sh/ruff/rules/assert/
    "S101",
    # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD002",
    # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "TD003",
]


[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "pages",
    "local-folder",
]


[tool.ruff.lint.isort.sections]
pages = ["pages"]


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
