[project]
name = "pytest-qaseio"
dynamic = [
  "version",
]
description = "Pytest plugin for Qase.io integration"
authors = [
  {name = "Saritasa", email = "pypi@saritasa.com"}
]
maintainers = [
  {name= "Anton Oboleninov", email = "anton.oboleninov@saritasa.com"},
  {name= "Nikita Azanov", email = "nikita.azanov@saritasa.com"},
]
keywords = [
  "pytest",
  "qase",
  "qaseio",
  "selenium",
  "autotests",
]
license = "MIT"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Testing",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Pytest",
]
requires-python = ">=3.11"
dependencies = [
  # Simple powerful testing with Python
  # https://docs.pytest.org/en/latest/
  "pytest>=7",
  # Qase TestOps API V1 client for Python
  # https://pypi.org/project/qase-api-client/
  "qase-api-client>=2",
  "tenacity>=9",
  # A platform independent file lock.
  # https://py-filelock.readthedocs.io/en/latest/index.html
  "filelock>=3",
  # Better dates & times for Python
  # https://pypi.org/project/arrow/
  "arrow>=1",
  # Python HTTP for Humans.
  # https://requests.readthedocs.io/en/latest/
  "requests>=2",
]

[project.optional-dependencies]
selenium = [
  # Official Python bindings for Selenium WebDriver
  # https://selenium-python.readthedocs.io/
  "selenium>=4",
]

[dependency-groups]
local = [
  "ipython>0",
  # Exports functions to access the IPython debugger, which features tab completion, syntax highlighting, better tracebacks
  # https://github.com/gotcha/ipdb
  "ipdb>0",
  # A framework for managing and maintaining multi-language pre-commit hooks.
  # https://pre-commit.com/
  "pre-commit>0",
  # Collection of invoke commands which used in Saritasa organization
  # https://github.com/saritasa-nest/saritasa-python-invocations/
  "saritasa-invocations[env_settings]>0",
  # A library and CLI app for rendering project templates.
  # https://copier.readthedocs.io/en/latest/
  "copier>0",
]
linters = [
  # Mypy is a static type checker for Python.
  # https://mypy.readthedocs.io/en/stable/
  "mypy>0",
]
docs = [
  # Project documentation with Markdown.
  # https://www.mkdocs.org/
  "mkdocs>0",
  # A powerful documentation framework on top of MkDocs
  # https://squidfunk.github.io/mkdocs-material/
  "mkdocs-material>0",
  # Automatic documentation from sources, for MkDocs
  # https://mkdocstrings.github.io/
  "mkdocstrings[python]>0",
  # Manage multiple versions of your MkDocs-powered documentation
  # https://github.com/jimporter/mike
  "mike>0",
]

[project.urls]
Documentation = "https://saritasa-nest.github.io/pytest-qaseio/latest/"
Repository = "https://github.com/saritasa-nest/pytest-qaseio"
Changelog = "https://saritasa-nest.github.io/pytest-qaseio/latest/changelog/"
Releases = "https://github.com/saritasa-nest/pytest-qaseio/releases/"
"Bug Tracker" = "https://github.com/saritasa-nest/pytest-qaseio/issues/"
Contributing ="https://saritasa-nest.github.io/pytest-qaseio/latest/contributing/"

[project.entry-points.pytest11]
pytest_qaseio = "pytest_qaseio.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.version]
# https://regex101.com/r/b6WRcJ/1
pattern = "(?<=^## )(?P<version>(\\d{1,2}\\.\\d{1,2}\\.\\d{1,3})).*$"
path = "CHANGELOG.md"
[tool.hatch.build.targets.wheel]
packages = [
  "pytest_qaseio"
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [
  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",
  "E",
  # https://docs.astral.sh/ruff/rules/#mccabe-c90
  "C90",
  # https://docs.astral.sh/ruff/rules/#isort-i
  "I",
  # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "N",
  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "D",
  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "UP",
  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ANN",
  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "S",
  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "B",
  # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "A",
  # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  "COM",
  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "C4",
  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "DTZ",
  # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
  "T10",
  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "T20",
  # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "PT",
  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "SIM",
  # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "PTH",
  # https://docs.astral.sh/ruff/rules/#flake8-todos-td
  "TD",
  # https://docs.astral.sh/ruff/rules/#eradicate-era
  "ERA",
  # https://docs.astral.sh/ruff/rules/#tryceratops-try
  "TRY",
  # https://docs.astral.sh/ruff/rules/#flynt-fly
  "FLY",
  # https://docs.astral.sh/ruff/rules/#perflint-perf
  "PERF",
  # https://docs.astral.sh/ruff/rules/#refurb-furb
  "FURB",
  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "PIE",
  # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "ASYNC",
  # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "RUF",
]
ignore = [
  # https://docs.astral.sh/ruff/rules/any-type
  "ANN401",
  # https://docs.astral.sh/ruff/rules/missing-type-kwargs
  "ANN003",
  # https://docs.astral.sh/ruff/rules/undocumented-public-module
  "D100",
  # https://docs.astral.sh/ruff/rules/undocumented-public-package
  "D104",
  # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class
  "D106",
  # https://docs.astral.sh/ruff/rules/undocumented-public-init
  "D107",
  # https://docs.astral.sh/ruff/rules/raise-vanilla-args
  "TRY003",
  # https://docs.astral.sh/ruff/rules/try-consider-else
  "TRY300",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  # https://docs.astral.sh/ruff/rules/unused-import
  "F401",
]
"**/tests/*" = [
  # https://docs.astral.sh/ruff/rules/assert
  "S101",
  # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg
  "S106",
  # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage
  "S311",
]
"**/test_*" = [
  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
  "ANN201",
]
[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
ignore_missing_imports = true
strict = false
warn_no_return = false
check_untyped_defs = true
disallow_any_generics = true
exclude = "venv|/.venv"
